feat: Improve command system.